--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,12 @@ h4 {
   margin: 0;
   text-align: right;
 }
+a {
+  color: white;
+  font-size: larger;
+  text-decoration-line: none;
+  text-decoration: none;
+}
 .applet {
   display: grid;
   grid-template-columns: 1fr auto 1fr auto 0.5fr;
