--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,12 @@ a {
   text-decoration-line: none;
   text-decoration: none;
 }
+a:visited {
+  color: white;
+  font-size: larger;
+  text-decoration-line: none;
+  text-decoration: none;
+}
 .applet {
   display: grid;
   grid-template-columns: 1fr auto 1fr auto 0.5fr;
